@@ -9,7 +9,6 @@ import java.io.InputStreamReader;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Date;
 import java.util.stream.Collectors;
 
@@ -29,10 +28,25 @@ public record MapModel(String name, Path file, Date loadAt, GameMap gameMap) {
      * @throws IOException When fails to access the file.
      */
     public static MapModel load(URL gameMapURL) throws IOException {
-        var gameMapFile = Paths.get(gameMapURL.getPath());
+        var gameMapFile = Path.of(gameMapURL.getPath());
         var reader = new BufferedReader(new InputStreamReader(gameMapURL.openStream()));
         var content = reader.lines().collect(Collectors.joining("\n"));
         var gameMap = GameMap.parse(content);
         return new MapModel(gameMapFile.getFileName().toString(), gameMapFile, new Date(), gameMap);
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+
+        MapModel mapModel = (MapModel) o;
+
+        return file.equals(mapModel.file);
+    }
+
+    @Override
+    public int hashCode() {
+        return file.hashCode();
     }
 }
